--- a/app/src/main/res/layout/fragment_search_page.xml
+++ b/app/src/main/res/layout/fragment_search_page.xml
@@ -46,6 +46,22 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <ProgressBar
+                android:id="@+id/searchFieldProgress"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:progressTint="@color/colorAccent"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <ListView
                 android:id="@+id/searchListView"
                 android:layout_width="0dp"
@@ -56,6 +72,7 @@
                 android:layout_marginBottom="8dp"
                 android:background="@color/backgroundColor"
                 android:scrollbars="vertical"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -72,6 +89,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:minHeight="40dp"
+        android:visibility="gone"
         app:cardBackgroundColor="@color/backgroundColor"
         app:cardCornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
