--- a/app/src/main/res/layout/upcoming_layout.xml
+++ b/app/src/main/res/layout/upcoming_layout.xml
@@ -40,7 +40,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:ellipsize="marquee"
         android:fontFamily="@font/nunito"
+        android:singleLine="true"
         android:text="@string/search_result_title_placeholder"
         android:textColor="@android:color/white"
         android:textSize="@dimen/title_font_size"
