--- a/app/src/main/res/layout/watch_list_text_view.xml
+++ b/app/src/main/res/layout/watch_list_text_view.xml
@@ -3,76 +3,107 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/backgroundColor">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/watchListTextCard"
+    <!--<android.support.v7.widget.CardView-->
+    <!--android:id="@+id/watchListTextCardview"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_marginStart="8dp"-->
+    <!--android:layout_marginTop="8dp"-->
+    <!--android:layout_marginEnd="8dp"-->
+    <!--android:layout_marginBottom="8dp"-->
+    <!--app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--app:layout_constraintEnd_toEndOf="parent"-->
+    <!--app:layout_constraintStart_toStartOf="parent"-->
+    <!--app:layout_constraintTop_toTopOf="parent">-->
+
+    <!--<android.support.constraint.ConstraintLayout-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:background="@color/backgroundColor">-->
+
+    <ImageView
+        android:id="@+id/watchListTextPoster"
+        android:layout_width="100dp"
+        android:layout_height="180dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/noimagefound" />
+
+    <TextView
+        android:id="@+id/watchListTextTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:minHeight="40dp"
+        android:ellipsize="marquee"
+        android:fontFamily="@font/nunito"
+        android:singleLine="true"
+        android:text="@string/search_result_title_placeholder"
+        android:textColor="@android:color/white"
+        android:textSize="@dimen/title_font_size"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintStart_toEndOf="@+id/watchListTextPoster"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <android.support.constraint.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/card_background">
+    <TextView
+        android:id="@+id/watchListTextPlot"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:ellipsize="end"
+        android:fontFamily="@font/titilliumweb"
+        android:maxLines="4"
+        android:text="@string/search_result_plot_placeholder"
+        android:textColor="@android:color/white"
+        android:textSize="@dimen/content_font_size"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/watchListTextFavourite"
+        app:layout_constraintStart_toEndOf="@+id/watchListTextPoster"
+        app:layout_constraintTop_toBottomOf="@+id/watchListTextReleaseDate" />
 
-            <TextView
-                android:id="@+id/watchListTextTitle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
-                android:fontFamily="@font/nunito"
-                android:text="@string/search_result_title_placeholder"
-                android:textAlignment="viewStart"
-                android:textColor="@color/mainFontColor"
-                android:textSize="@dimen/title_font_size"
-                android:visibility="visible"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/iconsLayout"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/watchListTextReleaseDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/raleway"
+        android:text="Date"
+        android:textColor="@android:color/white"
+        android:textSize="@dimen/subtitle_font_size"
+        app:layout_constraintStart_toEndOf="@+id/watchListTextPoster"
+        app:layout_constraintTop_toBottomOf="@+id/watchListTextTitle" />
 
-            <LinearLayout
-                android:id="@+id/iconsLayout"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
-                android:orientation="horizontal"
-                android:visibility="visible"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+    <ImageView
+        android:id="@+id/watchListTextFavourite"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/watchListTextWatched"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/watchListTextReleaseDate"
+        app:srcCompat="@drawable/ic_star_border_black_24dp" />
 
-                <ImageView
-                    android:id="@+id/watchListTextFavourite"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:paddingLeft="5dp"
-                    android:paddingRight="5dp"
-                    android:src="@drawable/ic_star_border_black_24dp" />
+    <ImageView
+        android:id="@+id/watchListTextWatched"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_check_black_24dp" />
 
-                <ImageView
-                    android:id="@+id/watchListTextWatched"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:paddingLeft="5dp"
-                    android:paddingRight="5dp"
-                    android:src="@drawable/ic_check_black_24dp" />
-
-            </LinearLayout>
-        </android.support.constraint.ConstraintLayout>
-    </android.support.v7.widget.CardView>
+    <!--</android.support.constraint.ConstraintLayout>-->
+    <!--</android.support.v7.widget.CardView>-->
 </android.support.constraint.ConstraintLayout>
